--- a/src/App.scss
+++ b/src/App.scss
@@ -127,6 +127,7 @@ img {
   padding: 5px;
   position: fixed;
   display: flex;
+  flex-wrap: wrap;
   margin: 0;
   bottom: 0;
   left: 0;
@@ -136,17 +137,26 @@ img {
   font-weight: bold;
   z-index: 999;
 
-  p {
-    width: 50px;
-    margin-left: -30px;
+  :last-child {
+    margin-right: 0;
   }
+
+  div {
+    display: flex;
+    margin-right: 1%;
+    margin-top: 5px;
+    margin-bottom: 5px;
+  }
+
   input {
     width: 150px;
   }
 
+  .number-input {
+    width: 42px;
+  }
+
   label {
-    margin-top: 13px;
-    margin-left: 5px;
-    margin-right: 35px;
+    margin-top: 5px;
   }
 }
